crates/keron-lang/tests/corpus/errors/check/symlink_wrong_arg_type.keron
from "std:fs" use symlink, Symlink

val s: Symlink = symlink(from = 1, to = "x")
